<resources>
    <string name="app_name">Pomodoro Timer</string>
    <string name="Start">Start</string>
    <string name="Mode">Focus/Pause</string>
    <string name="End">END</string>

    <string name="Focus">Time in Focus</string>
    <string name="Break">Time in Break</string>
    <string name="Percent">Focus Percent</string>

    <string-array name="options">
        <item>1 min</item>
        <item>5 mins</item>
        <item>10 mins</item>
    </string-array>

</resources>
