<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".TimerFragment">
    <TextView
        android:id="@+id/focusBreakLabel"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/chronometer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="213dp"
        android:layout_height="187dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/round"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:countDown = "true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/chronometer">

        <ImageButton
            android:id="@+id/focusBreakButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="90dp"
            android:background="@drawable/skip"
            android:text="@string/Mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/startPauseButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/start"
            android:background="@android:color/transparent"
            android:text="@string/Start"
            app:layout_constraintStart_toEndOf="@id/focusBreakButton"
            app:layout_constraintEnd_toStartOf="@id/endResetButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <ImageButton
            android:layout_marginRight="90dp"
            android:id="@+id/endResetButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/exit"
            android:text="@string/End"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>